unpackaged/main/default/objects/SDO_SFS_Work_Order_Volume__c/SDO_SFS_Work_Order_Volume__c.object-meta.xml
<CustomObject>
    <description>What: Work Order Volume object for SFS
Used in Analytics Demo Tool</description>
    <label>Work Order Volume</label>
    <nameField>
        <displayFormat>WOV-{0000}</displayFormat>
        <label>Work Order Volume Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Volumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>