unpackaged/main/default/objects/SDO_SFS_Work_Order_Volume__c/fields/Break_fix_Volume__c.field-meta.xml
<CustomField>
    <fullName>Break_fix_Volume__c</fullName>
    <label>Break-fix Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>