unpackaged/main/default/objects/SDO_SFS_Work_Order_Volume__c/fields/Inspection_Volume__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Volume__c</fullName>
    <label>Inspection Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>