unpackaged/main/default/objects/SDO_SFS_Work_Order_Volume__c/fields/Maintenance_Volume__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Volume__c</fullName>
    <label>Maintenance Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>