unpackaged/main/default/objects/SDO_SFS_Work_Order_Volume__c/fields/Residential_Install_Volume__c.field-meta.xml
<CustomField>
    <fullName>Residential_Install_Volume__c</fullName>
    <label>Residential Install Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>