unpackaged/main/default/objects/SDO_SFS_Work_Order_Volume__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Work Order Volumes</relationshipLabel>
    <relationshipName>Work_Order_Volumes</relationshipName>
    <type>Lookup</type>
</CustomField>