unpackaged/main/default/objects/SDO_SFS_Work_Order_Volume__c/fields/Total_Work_Order_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Order_Volume__c</fullName>
    <formula>Break_fix_Volume__c +  Commerical_Install_Volume__c +  Inspection_Volume__c +  Maintenance_Volume__c +  Residential_Install_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Work Order Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>